(Boeing r1765) added simple distributed Python script example involving N/2 local nodes and  N/2 nodes on a remote server, connected to a common switch
lacks runtime access to the remote nodes (e.g. for command execution)

--- a/packaging/rpm/core.spec.in
+++ b/packaging/rpm/core.spec.in
@@ -249,6 +249,7 @@ sed -i 's/emane_realtime = True/emane_realtime = False/' /etc/core/core.conf
 %{_datadir}/%{name}/examples/myservices/README.txt
 %{_datadir}/%{name}/examples/myservices/sample.py*
 %{_datadir}/%{name}/examples/netns/basicrange.py*
+%{_datadir}/%{name}/examples/netns/distributed.py*
 %{_datadir}/%{name}/examples/netns/emane80211.py*
 %{_datadir}/%{name}/examples/netns/howmanynodes.py*
 %{_datadir}/%{name}/examples/netns/iperf-performance-chain.py*
