--- a/packaging/deb/control
+++ b/packaging/deb/control
@@ -5,7 +5,7 @@ Maintainer: Jeff Ahrenholz <core-dev@pf.itd.nrl.navy.mil>
 Standards-Version: 3.8.4
 Build-Depends: debhelper (>= 9), cdbs, autoconf, automake, gcc, libev-dev, make, python-dev, libreadline-dev, bridge-utils, ebtables, iproute, imagemagick, pkg-config, help2man
 # python-sphinx
-Homepage: http://cs.itd.nrl.navy.mil/work/core/index.php
+Homepage: http://www.nrl.navy.mil/itd/ncs/products/core
 
 Package: core-daemon
 Architecture: any 
