Makefile improvements related to building rpms.

--- a/Makefile.am
+++ b/Makefile.am
@@ -48,9 +48,9 @@ dist-hook:
 
 # build a source RPM using Fedora ~/rpmbuild dirs
 .PHONY: rpm
-rpm:
+rpm: dist
 	rpmdev-setuptree
-	cp -afv core-*.tar.gz ~/rpmbuild/SOURCES
+	cp -afv core-@CORE_VERSION@.tar.gz ~/rpmbuild/SOURCES
 	cp -afv packaging/rpm/core.spec ~/rpmbuild/SPECS
 	rpmbuild -bs ~/rpmbuild/SPECS/core.spec
 
