Improve determining an appropriate python install prefix.

--- a/configure.ac
+++ b/configure.ac
@@ -236,6 +236,11 @@ if test "x$want_python" = "xyes"; then
              AC_SUBST(libev_CFLAGS)
              AC_SUBST(libev_LIBS, [-lev]),
 	     AC_MSG_ERROR([Python bindings require libev (try installing your 'libev-devel' or 'libev-dev' package)])))
+    AC_SUBST(pyprefix, `./python-prefix.py ${PYTHON_PREFIX}`)
+    if test "${pyprefix}" != "${PYTHON_PREFIX}"; then
+	pythondir=`echo ${pythondir} | sed -e 's,[$][{]prefix[}],${pyprefix},g'`
+	pyexecdir=`echo ${pyexecdir} | sed -e 's,[$][{]exec_prefix[}],${pyprefix},g'`
+    fi
 else
     # Namespace support requires Python support
     want_linux_netns=no
@@ -342,6 +347,7 @@ ${PACKAGE_STRING} Configuration:
   GUI config:                 ${CORE_GUI_CONF_DIR}
   Daemon path:                ${SBINDIR}
   Daemon config:              ${CORE_CONF_DIR}
+  Python install prefix:      ${pyprefix}
   Python modules:             ${pythondir}
   Logs:                       ${CORE_STATE_DIR}/log
 
