--- a/daemon/src/Makefile.am
+++ b/daemon/src/Makefile.am
@@ -38,7 +38,7 @@ install:	install-exec-hook
 
 # Python libraries install
 install-exec-hook:
-	SBINDIR=${DESTDIR}/@SBINDIR@ $(PYTHON) setup.py install --prefix=${DESTDIR}/${prefix} --install-purelib=${DESTDIR}/${pythondir} --install-platlib=${DESTDIR}/${pyexecdir} --no-compile
+	SBINDIR=${DESTDIR}/@SBINDIR@ $(PYTHON) setup.py install --prefix=${DESTDIR}/${pyprefix} --install-purelib=${DESTDIR}/${pythondir} --install-platlib=${DESTDIR}/${pyexecdir} --no-compile
 #python setup.py install --prefix=${DESTDIR}${PYTHON_PREFIX}
 
 # Python libraries uninstall
@@ -46,9 +46,9 @@ uninstall-hook:
 	rm -f ${sbindir}/vnoded
 	rm -f ${sbindir}/vcmd
 	rm -f ${sbindir}/netns
-	rm -f ${pythondir}/netns-*.egg-info
-	rm -f ${pythondir}/netns.so
-	rm -f ${pythondir}/vcmd.so
+	rm -f ${pyexecdir}/core_python_netns-1.0-py${PYTHON_VERSION}.egg-info
+	rm -f ${pyexecdir}/netns.so
+	rm -f ${pyexecdir}/vcmd.so
 
 # Python libraries cleanup
 clean-local: clean-local-check
