--- a/configure.ac
+++ b/configure.ac
@@ -236,7 +236,7 @@ if test "x$want_python" = "xyes"; then
              AC_SUBST(libev_CFLAGS)
              AC_SUBST(libev_LIBS, [-lev]),
 	     AC_MSG_ERROR([Python bindings require libev (try installing your 'libev-devel' or 'libev-dev' package)])))
-    AC_SUBST(pyprefix, `./python-prefix.py ${PYTHON_PREFIX}`)
+    AC_SUBST(pyprefix, `eval ./python-prefix.py ${PYTHON_PREFIX}`)
     if test "${pyprefix}" != "${PYTHON_PREFIX}"; then
 	pythondir=`echo ${pythondir} | sed -e 's,[$][{]prefix[}],${pyprefix},g'`
 	pyexecdir=`echo ${pyexecdir} | sed -e 's,[$][{]exec_prefix[}],${pyprefix},g'`
