packaging: Add procps-ng as an unconditional dependency.
This is needed for sysctl.

--- a/packaging/rpm/core.spec.in
+++ b/packaging/rpm/core.spec.in
@@ -22,14 +22,11 @@ building virtual networks using Linux network namespace containers and bridging.
 %package daemon
 Summary:	Common Open Research Emulator daemon back-end
 Group:		System Tools
-Requires:	bash bridge-utils ebtables iproute libev python net-tools
+Requires:	bash bridge-utils ebtables iproute libev python net-tools procps-ng
 %if %{with_kernel_modules_extra}
-Requires: kernel-modules-extra procps-ng
+Requires: kernel-modules-extra
 %endif
-BuildRequires:  make automake autoconf libev-devel python-devel bridge-utils ebtables iproute net-tools ImageMagick help2man 
-%if %{with_kernel_modules_extra}
-BuildRequires: procps-ng
-%endif
+BuildRequires:  make automake autoconf libev-devel python-devel bridge-utils ebtables iproute net-tools ImageMagick help2man procps-ng
 Provides:	core-daemon
 # python-sphinx
 %description daemon
