--- a/packaging/deb/control
+++ b/packaging/deb/control
@@ -1,15 +1,15 @@
 Source: core
 Section: net
 Priority: optional
-Maintainer: Jeff Ahrenholz <core-dev@pf.itd.nrl.navy.mil>
+Maintainer: CORE Developers <core-dev@pf.itd.nrl.navy.mil>
 Standards-Version: 3.8.4
-Build-Depends: debhelper (>= 9), cdbs, autoconf, automake, gcc, libev-dev, make, python-dev, libreadline-dev, bridge-utils, ebtables, iproute, imagemagick, pkg-config, help2man
+Build-Depends: debhelper (>= 9), cdbs, autoconf, automake, gcc, libev-dev, make, python-dev, libreadline-dev, bridge-utils, ebtables, iproute2 | iproute, imagemagick, pkg-config, help2man
 # python-sphinx
 Homepage: http://www.nrl.navy.mil/itd/ncs/products/core
 
 Package: core-daemon
 Architecture: any 
-Depends: bash (>=3.0), bridge-utils, ebtables, iproute, libev4, python (>=2.6), dpkg (>=1.15.4), procps, ${shlibs:Depends}
+Depends: bash (>=3.0), bridge-utils, ebtables, iproute2 | iproute, libev4, python (>=2.6), dpkg (>=1.15.4), procps, ${shlibs:Depends}
 Recommends: quagga
 Description: Emulate virtual networks in a box.
  The Common Open Research Emulator provides Python modules for building virtual
@@ -18,7 +18,8 @@ Description: Emulate virtual networks in a box.
 
 Package: core-gui
 Architecture: all
-Depends: bash (>=3.0), tcl8.5, tk8.5, libtk-img
+Depends: bash (>=3.0), tcl (>= 8.5), tk (>= 8.5)
+Recommends: libtk-img
 Description: Emulate virtual networks in a box.
  The Common Open Research Emulator provides Python modules for building virtual
  networks using Linux network namespace containers and bridging. This is the
