--- a/packaging/deb/control
+++ b/packaging/deb/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: CORE Developers <core-dev@pf.itd.nrl.navy.mil>
 Standards-Version: 3.8.4
-Build-Depends: debhelper (>= 9), cdbs, autoconf, automake, gcc, libev-dev, make, python-dev, libreadline-dev, bridge-utils, ebtables, iproute2 | iproute, imagemagick, pkg-config, help2man
+Build-Depends: debhelper (>= 9), cdbs, dh-autoreconf, autoconf, automake, gcc, libev-dev, make, python-dev, libreadline-dev, bridge-utils, ebtables, iproute2 | iproute, imagemagick, pkg-config, help2man
 # python-sphinx
 Homepage: http://www.nrl.navy.mil/itd/ncs/products/core
 
