Changed default listen address back to localhost from 0.0.0.0

--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -12,7 +12,7 @@ pidfile = /var/run/core-daemon.pid
 logfile = /var/log/core-daemon.log
 xmlfilever = 1.0
 # you may want to change the listenaddr below to 0.0.0.0
-listenaddr = 0.0.0.0
+listenaddr = localhost
 port = 4038
 numthreads = 1
 verbose = False
