--- a/packaging/rpm/core.spec.in
+++ b/packaging/rpm/core.spec.in
@@ -383,7 +383,7 @@ sed -i 's/emane_realtime = True/emane_realtime = False/' /etc/core/core.conf
 %{_sbindir}/vnoded
 
 %changelog
-* Thu May 21 2015 CORE Developers <core-dev@pf.itd.nrl.navy.mil> - 4.8rc1
+* Thu Jun 5 2015 CORE Developers <core-dev@pf.itd.nrl.navy.mil> - 4.8
 - Support for NRL Network Modeling Framework (NMF) XML representation, bugfixes
 * Wed Aug 6 2014 Jeff Ahrenholz <core-dev@pf.itd.nrl.navy.mil> - 4.7
 - EMANE 0.9.1, asymmetric links, bugfixes
