--- a/configure.ac
+++ b/configure.ac
@@ -12,10 +12,10 @@
 #
 # this defines the CORE version number, must be static for AC_INIT
 #
-AC_INIT(core, 4.8rc1, core-dev@pf.itd.nrl.navy.mil)
+AC_INIT(core, 4.8, core-dev@pf.itd.nrl.navy.mil)
 VERSION=$PACKAGE_VERSION
 CORE_VERSION=$PACKAGE_VERSION
-CORE_VERSION_DATE=20141010
+CORE_VERSION_DATE=20150605
 COREDPY_VERSION=$PACKAGE_VERSION
 
 #
