daemon: Make generation of EMANE location events explicitly configurable.

--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -55,6 +55,7 @@ quagga_sbin_search = "/usr/local/sbin /usr/sbin /usr/lib/quagga"
 # EMANE configuration
 emane_platform_port = 8101
 emane_transform_port = 8201
+emane_event_generate = True
 emane_event_monitor = False
 emane_models = RfPipe, Ieee80211abg, CommEffect, Bypass
 # EMANE log level range [0,4] default: 2
