scripts: Update the core-daemon systemd service configuration.

--- a/configure.ac
+++ b/configure.ac
@@ -326,6 +326,7 @@ AC_CONFIG_FILES([Makefile
 		gui/Makefile
 		gui/icons/Makefile
 		scripts/Makefile
+		scripts/core-daemon.service
 		scripts/perf/Makefile
 		scripts/xen/Makefile
 		doc/Makefile
